removed module-infos and some compiling options