@@ -627,10 +627,6 @@
             <target>${maven.compiler.target}</target>
             <encoding>${project.build.sourceEncoding}</encoding>
             <showWarnings>true</showWarnings>
-            <compilerArgs>
-              <arg>--add-modules</arg>
-              <arg>java.sql</arg>
-            </compilerArgs>
           </configuration>
         </plugin>
 
@@ -644,7 +640,6 @@
           <artifactId>maven-pmd-plugin</artifactId>
           <version>${maven-pmd-plugin.version}</version>
           <configuration>
-            <linkXref>false</linkXref>
             <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
             <minimumTokens>30</minimumTokens>
             <targetJdk>${maven.compiler.target}</targetJdk>
